# yahtzee

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: yahtzee-ci.yml
src/: app.rs  assets.rs  events.rs  game_data.rs  hand.rs  main.rs  play.rs  score_table.rs  scoring.rs  ui.rs
tools/: checker.sh
