[package]
name = "yahtzee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
array-macro = "2.1.5"
enum-iterator = "1.1.3"
log = "0.4.17"
tui = "0.19.0"
crossterm = "0.25.0"
anyhow = "1.0.66"