[package]
name = "yahtzee"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
array-macro = "2.1.5"
enum-iterator = "1.2.0"
ratatui = "0.25.0"
crossterm = "0.25.0"
anyhow = "1.0.68"
thiserror = "1.0.56"
